--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,26 @@
   publisher={Oxford University Press}
 }
 
+@ARTICLE{Biagetti2019Galax...7...71B,
+       author = {{Biagetti}, Matteo},
+        title = "{The Hunt for Primordial Interactions in the Large-Scale Structures of the Universe}",
+      journal = {Galaxies},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2019,
+        month = aug,
+       volume = {7},
+       number = {3},
+        pages = {71},
+          doi = {10.3390/galaxies7030071},
+archivePrefix = {arXiv},
+       eprint = {1906.12244},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019Galax...7...71B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @article{PhysRevD.69.103501,
   title = {Cosmological parameters from SDSS and WMAP},
   author = {Tegmark, Max and Strauss, Michael A. and Blanton, Michael R. and Abazajian, Kevork and Dodelson, Scott and Sandvik, Havard and Wang, Xiaomin and Weinberg, David H. and Zehavi, Idit and Bahcall, Neta A. and Hoyle, Fiona and Schlegel, David and Scoccimarro, Roman and Vogeley, Michael S. and Berlind, Andreas and Budavari, Tam\'as and Connolly, Andrew and Eisenstein, Daniel J. and Finkbeiner, Douglas and Frieman, Joshua A. and Gunn, James E. and Hui, Lam and Jain, Bhuvnesh and Johnston, David and Kent, Stephen and Lin, Huan and Nakajima, Reiko and Nichol, Robert C. and Ostriker, Jeremiah P. and Pope, Adrian and Scranton, Ryan and Seljak, Uro\ifmmode \check{s}\else \v{s}\fi{} and Sheth, Ravi K. and Stebbins, Albert and Szalay, Alexander S. and Szapudi, Istv\'an and Xu, Yongzhong and Annis, James and Brinkmann, J. and Burles, Scott and Castander, Francisco J. and Csabai, Istvan and Loveday, Jon and Doi, Mamoru and Fukugita, Masataka and Gillespie, Bruce and Hennessy, Greg and Hogg, David W. and Ivezi\ifmmode \acute{c}\else \'{c}\fi{}, \ifmmode \check{Z}\else \v{Z}\fi{}eljko and Knapp, Gillian R. and Lamb, Don Q. and Lee, Brian C. and Lupton, Robert H. and McKay, Timothy A. and Kunszt, Peter and Munn, Jeffrey A. and O'Connell, Liam and Peoples, John and Pier, Jeffrey R. and Richmond, Michael and Rockosi, Constance and Schneider, Donald P. and Stoughton, Christopher and Tucker, Douglas L. and Vanden Berk, Daniel E. and Yanny, Brian and York, Donald G.},
