--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -2,7 +2,9 @@
 \author[M. Rezaie et al.]{Mehdi Rezaie$^{1}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3}$,  Hui Kong$^{3}$,  Edmond Chaussidon$^{4}$,\newauthor
 Anna Porredon$^{3}$, Lado Samushia$^{1}$, Rongpu Zhou$^{5}$, Alex Krolewski$^{6,7,8}$, Arnaud de Mattia$^{4}$,\newauthor
 Jose Bermejo$^{?}$, Florian Beutler$^{9}$, Christophe Yeche$^{4}$, Nathalie Palanque-Delabrouille$^{4,5}$,\newauthor
-  Klaus Honscheid$^{2,10}$, and DESI Builders
+Klaus Honscheid$^{2,10}$, Santi Avila, Eva Mueller, Will Percival, Shadab Alam, \newauthor
+Benedict Bahr-Kalus, Chia-Hsun Chuang, Noah Weaverdyck, Simone Ferraro, \newauthor 
+Tanveer Karim, and Adam Myers
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\
