--- a/sections/data.tex
+++ b/sections/data.tex
@@ -2,7 +2,7 @@
 \label{sec:data}
 
 \subsection{DESI imaging LRG sample}
-We work with the photometric LRGs selected from the DESI Legacy Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the selection criteria designed for the DESI 1\% survey \mr{(CITE)}, described as the SV3 selection in more detail in \cite{zhou2022target}. The color-magnitude selection cuts are defined in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared, as summarized in Tab. \ref{tab:ts}. The selection cuts are developed differently for each imaging survey to reach an almost uniform target surface density despite different survey efficiency and photometric calibration between DECaLS and BASS+MzLS. The implementation of these selection cuts in the DESI data processing pipeline is explained in \cite{myers2022}. Fig. \ref{fig:nz} shows the redshift distribution of the DR9 LRGs (solid black), inferred from the spectroscopic DESI Survey Validation data \mr{(CITE)}, and the evolution of halo bias (red dashed), adopted from \cite{zhou2021clustering}.
+Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the color-magnitude selection criteria designed for the DESI 1\% survey \mr{(CITE)}, described as the SV3 selection in more detail in \cite{zhou2022target}. The color-magnitude selection cuts are defined in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared, as summarized in Tab. \ref{tab:ts}. The selection cuts are developed differently for each imaging survey to reach an almost uniform target surface density despite different survey efficiency and photometric calibration between DECaLS and BASS+MzLS. The implementation of these selection cuts in the DESI data processing pipeline is explained in \cite{myers2022}. Fig. \ref{fig:nz} shows the redshift distribution of the DR9 LRGs (solid black), inferred from the spectroscopic DESI Survey Validation data \mr{(CITE)}, and the evolution of halo bias (red dashed), adopted from \cite{zhou2021clustering}.
 
 \begin{figure}
  \centering
@@ -37,15 +37,15 @@ We work with the photometric LRGs selected from the DESI Legacy Imaging Surveys 
 
 \begin{figure*}
  \centering
- \includegraphics[width=\textwidth]{figures/dr9data.pdf}
- \caption{DESI Legacy Imaging Survey Data Release 9 Luminous Red Galaxies and imaging properties \citep{dey2018overview}. Top: Observed target density field in deg$^{-2}$. Spurious disconnected islands from the DECaLS North footprint at Declination below $-11$ and parts of the DECaLS South with Declination below $-30$ are rejected from the DR9 sample due to potential calibration issues. Bottom: Mollweide projections of the DR9 catalog imaging properties (survey depth and astronomical seeing/psfsize) and MW foregrounds (extinction and local stellar density) in celestial coordinates.}
+ \includegraphics[width=0.95\textwidth]{figures/dr9data.pdf}
+ \caption{Top: The DESI imaging LRG density field in Mollweide projection. Spurious disconnected islands from the North footprint and declination below $-30$ from the South footprint are removed for the analysis due to potential calibration issues (see text). Bottom: Mollweide projections of the DR9 catalog imaging properties (survey depth and astronomical seeing/psfsize) and MW foregrounds (extinction and local stellar density) in celestial coordinates.}
  \label{fig:ng}
 \end{figure*}
 
-DESI-like LRGs are selected brighter than the imaging survey depth limits; therefore, the DR9 LRG density field is nearly homogenous, unlike the other DESI tracers. To further reduce stellar contamination, the LRG sample is masked rigorously for foreground bright stars, galaxies, and clusters of galaxies\footnote{See the maskbits at \url{https://www.legacysurvey.org/dr9/bitmasks/}}. Then, the sample is binned into \textsc{healpix} \citep{gorski2005healpix} at $\textsc{nside}=256$ to construct the 2D density map with an average surface density of $800$ deg$^{-2}$ with sky coverage around $14000$ square degrees. We correct for the pixel incompleteness and lost areas in the density field of LRGs using a catalog of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied. Fig. \ref{fig:ng} (top) shows the observed density field of the DR9 LRGs in deg$^{-2}$ before applying any correction weights to account for imaging systematic effects. The DR9 LRG density exhibits large-scale spurious fluctuations, which are unlikely to be of cosmological origin. Specifically, the SGC footprint exhibits some systematic under-density while there is some systematic over-density near the survey boundaries in the NGC. 
+DESI-like LRGs are selected brighter than the imaging survey depth limits; therefore, the DR9 LRG density field is nearly homogenous, unlike the other DESI tracers. To further reduce stellar contamination, the LRG sample is masked rigorously for foreground bright stars, galaxies, and clusters of galaxies\footnote{See the maskbits at \url{https://www.legacysurvey.org/dr9/bitmasks/}}. Then, the sample is binned into \textsc{HEALPix} \citep{gorski2005healpix} pixels at $\textsc{nside}=256$ to construct the 2D density map with an average surface density of $800$ deg$^{-2}$ with sky coverage around $14000$ square degrees. We correct for the pixel incompleteness and lost areas in the LRG density field using a catalog of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied. Fig. \ref{fig:ng} (top) shows the observed density field of the DR9 LRGs in deg$^{-2}$ before applying any correction weights to account for imaging systematic effects. The DR9 LRG density exhibits large-scale spurious fluctuations, which are unlikely to be of cosmological origin. Specifically, the SGC footprint exhibits some systematic under-density while there is some systematic over-density near the survey boundaries in the NGC. 
 
 \subsubsection{Correlation coefficients}
-We study the correlations between the DR9 LRG sample and imaging properties as potential sources of systematic error, mapped into \textsc{HEALPix} at the same \textsc{nside}. Following \cite{zhou2022target}, imaging properties investigated in this work are local stellar density constructed from point-like sources with a g-band magnitude in the range $12 \leq g < 17$ from the Gaia DR2 \citep[see,][]{gaiadr2, myers2022}; Galactic extinction E[B-V] from \cite{schlegel1998maps}; and survey-related imaging properties include survey depth (galaxy depth in the $g$, $r$, and $z$ bands and PSF depth in W1) and astronomical seeing (psfsize) in the $g$, $r$, and $z$ bands. Templates for these survey-related imaging properties are produced by making the histogram of randoms, which are painted with imaging properties, in \textsc{HEALPix} and averaging over the attributes of randoms in each pixel. 
+First, we study the linear correlation between the LRG density map and various imaging properties which are considered as potential sources of systematic error. The imaging properties are mapped into \textsc{HEALPix} pixels at the same \textsc{nside}. Following \cite{zhou2022target}, the imaging properties investigated in this work are local stellar density constructed from point-like sources with a g-band magnitude in the range $12 \leq g < 17$ from the Gaia DR2 \citep[see,][]{gaiadr2, myers2022}; Galactic extinction E[B-V] from \cite{schlegel1998maps}; and survey-related imaging properties include survey depth (galaxy depth in the $g$, $r$, and $z$ bands and PSF depth in W1) and astronomical seeing (psfsize) in the $g$, $r$, and $z$ bands. Templates for the survey-related imaging properties are produced by binning the randoms into \textsc{HEALPix},  and averaging over the imaging attributes of the randoms in each pixel. 
 
 Fig. \ref{fig:ng} (bottom) illustrates the imaging templates investigated as potential sources of systematic error. Each map shows its own characteristic large-scale spurious fluctuations. For instance, the under-dense part of the DR9 LRG sample in the SGC can be associated with survey depth, while the over-density in the NGC can be linked to the extinction map. We reject some parts of the DR9 sample to minimize the potential for photometric calibration systematics. There are some disconnected islands, hereafter referred to as \textit{spurious islands}, in the DECaLS North region at Dec $< -11$. Additionally, some parts of the DECaLS South footprint with Dec $< -30$ are removed from the sample, because a different catalog of standard stars is employed to calibrate images below that region. We discuss how these quality cuts influence $\fnl$ constraints from the DR9 LRG sample in Section \ref{sec:results}. 
 
