--- a/sections/results.tex
+++ b/sections/results.tex
@@ -235,3 +235,9 @@ With template based mitigation, the measured power spectrum is biased and the am
 \includegraphics[width=0.45\textwidth]{figures/fnlbias}
 \caption{True $\fnl$ vs measured $\fnl$ from the mean of the mocks with (dashed) and without systematics (solid).}\label{fig:fnlbias}
 \end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{figures/mcmc_cont.pdf}
+\caption{Shifted probability distributions of $\fnl$ from mocks.}\label{fig:contmcmc}
+\end{figure}
