--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -1,28 +1,42 @@
 \section{Analysis techniques}
-\label{sec:method}
-%This section describes the estimator for measuring the angular power spectrum and the methodology for modeling it in the presence of PNG. We also demonstrate how we correct for the effects of survey geometry and integral constraint in the model power spectrum. Finally, we discuss how remaining systematic fluctuations are characterized using the cross-correlation between the LRG density and imaging properties and the mean density contrast of the LRG sample. 
- 
+\label{sec:method} 
  
 \subsection{Power spectrum estimator}
-For pixel $i$, the density contrast field $\delta_{i}$ is constructed from the observed density of galaxies $\rho_{i}$,
+We follow the procedure described in \cite{hivon2002master} to estimate the angular power spectrum. We begin with constructing the density contrast field $\delta_{i}$ from the observed density of galaxies $\rho_{i}$,
 \begin{align}\label{eq:delta}
     \hat{\delta}_{i} &= \frac{\rho_{i}}{\hat{\overline{\rho}}} - 1,
 \end{align}
-and $\hat{\overline{\rho}}$ is the mean galaxy density estimated directly from the data,
+where $\hat{\overline{\rho}}$ is the mean galaxy density estimated directly from the observed density field,
 \begin{equation}\label{eq:nbar}
 \hat{\overline{\rho}} = \frac{\sum_{i}\rho_{i}f_{{\rm pix},i}}{\sum_{i}f_{{\rm pix},i}},
 \end{equation}
-where $f_{{\rm pix},i}$ represents the fractional area of pixel $i$, and is estimated by uniformly distributing random galaxies over the footprint. The angular power spectrum is then defined as the variance of the spherical harmonic transform of the field $\delta_{i}$,
-\begin{equation}\label{eq:pusedocell}
-        \hat{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} |\hat{a}_{\ell m}|^{2},
-\end{equation}
-with,
+with the pixel fractional completeness $f_{{\rm pix},i}$ represented by randoms. Then, the density contrast field $\delta_{i}$ is expanded into spherical harmonics $Y_{\ell m}$, 
 \begin{equation}
-        \hat{a}_{\ell m} = \frac{4\pi}{N_{{\rm pix}}} \sum_{i=1}^{N_{{\rm pix}}}  \hat{\delta}_{i}~f_{{\rm pix}, i}~ Y^{*}_{\ell m}(\theta_{i}, \phi_{i}),
+        \hat{a}_{\ell m} = \int d\Omega ~ \delta f_{\rm pix} Y^{*}_{\ell m},
 \end{equation}
-where $N_{\rm pix}$ is the number of non-empty pixels, and $\theta$ and $\phi$ represent the polar and azimuthal angular coordinates of the center for pixel \textit{i}, respectively. We the implementation of \texttt{anafast} from \citep[\textsc{HEALPix};][]{gorski2005healpix} to measure the angular power spectrum. The power spectrum estimator is biased because of the survey geometry; different harmonic modes are no longer independent and the measured power on scales near the survey size is zero. Later we will describe how we account for the effects in the model power spectrum, and validate the model against the lognormal simulations. 
+to estimate the angular power spectrum,
+\begin{equation}\label{eq:pusedocell}
+        \hat{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} |\hat{a}_{\ell m}|^{2}.
+\end{equation}
+We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package \citep{gorski2005healpix} to do fast harmonic transforms and estimate the pseudo angular power spectrum. This estimator is biased for a partial sky coverage, and thus often referred to as the pseudo power spectrum. Because of the survey mask, different harmonic modes are no longer independent and the measured power on scales near the survey size is pushed to zero. These effects impact the galaxy power spectrum on large scales, where the sensitivity to PNG is high. Therefore, correcting for these survey geometry-related effects is crucial for our analysis, and later we will describe how we account for the systematics in the model power spectrum. 
 
  \subsection{Modeling}
+
+\subsubsection{Power spectrum}
+With redshift space distortions included, the projected angular power spectrum of galaxies is related to the 3D power spectrum $P(k)$  \citep[see, e.g.,][]{Padmanabhan2007} and shotnoise $N_{\rm shot}$ by,
+\begin{equation}\label{eq:cell}
+    C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
+\end{equation}
+where the shotnoise is assumed to scale-independent, and $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ is a kernel which determines how much each wavenumber $k$ contributes to mode $\ell$ by integrating over spherical Bessel functions, $ j_{\ell}(kr)$, and their second derivatives for the RSD term,
+\begin{align}
+    \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r b(k, z) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
+    \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr).
+\end{align}
+The linear growth factor, $D(z)$, is scaled such that $D(0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$} (see, Fig. \ref{fig:nz}). The galaxy bias, $b(k,z)$ can be written as the redshift dependent linear bias (Fig. \ref{fig:nz}) and the scale-dependent shift due to PNG,
+\begin{equation}
+b(k, z) = b(z) + 3 (b(z) - p) \fnl \frac{\delta_{c} \Omega_{m} H^{2}_{0}}{k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
+\end{equation}
+where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{Because $k$ is in unit of $h/{\rm Mpc}$, $H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$}, $T(k)$ is the transfer function, $\delta_{c}=1.686$ is the critical density for gravitational collapse \citep{fillmore1984self}, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ \mr{(see, e.g., Mueller et al 2018)}. We choose $p=1$ for our sample of LRGs following the universality of halo function for massive haloes that host old galaxies. where $p$ determines the response of galaxies to the halo gravitational field. If only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values, e.g., $p=1.6$ \citep{slosar2008constraints}. The rapid oscillations in spherical Bessel functions for the integrals over $dr$ are handled with the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond}.
 
  \begin{figure}
 \centering
@@ -30,50 +44,22 @@ where $N_{\rm pix}$ is the number of non-empty pixels, and $\theta$ and $\phi$ r
 \caption{Mean power spectrum of the lognormal density fields with $\fnl=0$ and best fit theoretical prediction after accounting for the survey geometry and integral constraint effects. Dark and light shades represent $1\sigma$ error on the mean and one realization, respectively. Bottom panel shows the residual power spectrum relative to the mean power spectrum of the mocks. No imaging systematic effects are added to these mocks.}\label{fig:model_mock}
 \end{figure}
 
-\subsubsection{Power spectrum}
-The angular power spectrum is a projection of the 3D clustering of galaxies along the line of sight over all possible wavenumbers $k$. With redshift space distortions included, the projected angular power spectrum of galaxies is related to the 3D linear power spectrum $P(k)$ and shotnoise $N_{\rm shot}$ by \citep[see, e.g.,][]{Padmanabhan2007},
-\begin{equation}\label{eq:cell}
-    C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
-\end{equation}
-where shotnoise is assumed to scale-independent, and kernel $\Delta_{\ell}(k) = \Delta^{\rm g}_{\ell}(k) + \Delta^{\rm RSD}_{\ell}(k)$ determines how much each wavenumber $k$ contributes to mode $\ell$ by integrating over all comoving scales $r$,
-\begin{align}
-    \Delta^{\rm g}_{\ell}(k) &= \int \frac{dr}{r} r b(r, k) D(r) \frac{dN}{dr} j_{\ell}(kr),\\
-    \Delta^{\rm RSD}_{\ell}(k) &= - \int \frac{dr}{r} r f(r) D(r) \frac{dN}{dr} j^{\prime\prime}_{\ell}(kr),
-\end{align}
-where $D(r)$ is the normalized growth factor such that $D(0)=1$, $f(r)$ is the growth rate, and $dN/dr$ is the normalized redshift distribution of galaxies\footnote{$dN/dr = (dN/dz)*(dz/dr) \propto (dN/dz)*H(z)$} (see, Fig. \ref{fig:nz}). In the presence of local primordial non-Gaussianity, $b(r)$ is the linear bias $b$ (see, Fig. \ref{fig:nz}) plus the scale-dependent shift due to PNG (see, Eq. \ref{eq:db}),
-\begin{equation}
-b(k, r) = b + \frac{2 (b - p) \fnl \delta_{c}}{\alpha (k, r)},
-\end{equation}
-where $\alpha(k,r) \propto k^{2}D(r)$, $\delta_{c}=1.686$ is the critical density above which gravitational collapse occurs \citep{fillmore1984self}, and the parameter $p$ determines the response of the tracer to halo's gravitational field, e.g., $1$ for luminous red galaxies following universality and $1.6$ for tracers that are results of recent mergers like quasars. In order to overcome rapid oscillations in spherical Bessel functions, FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} are employed to evaluate the inner integrations over $d\ln r$.
-
 \subsubsection{Survey geometry and integral constraint}
-For a galaxy survey that observes the sky partially, the measured power spectrum is convolved with the survey geometry. This means that the pseudo-power spectrum $\hat{C}_{\ell}$ obtained by the direct Spherical Harmonic Transforms of a partial sky map, differs from the full-sky angular spectrum $C_{\ell}$. However, their ensemble average is related by a mixing matrix \citep{hivon2002master}, 
+The ensemble average for the partial sky power spectrum is related to that of the full sky power spectrum via the mode-mode coupling matrix $M_{\ell \ell^{\prime}}$ ,
 \begin{equation}
-    <\hat{C}_{\ell}> = \sum_{\ell^{\prime}} M_{\ell \ell^{\prime}}<C_{\ell^{\prime}}>,
+    <\hat{C}_{\ell}> = \sum_{\ell^{\prime}} M_{\ell \ell^{\prime}}<C_{\ell^{\prime}}>.
 \end{equation}
-where $M_{\ell \ell^{\prime}}$ represents the mode-mode coupling from the partial sky coverage. This is known as the Window Function effect and a proper assessment of this effect is crucial for a robust measurement of the large-scale clustering of galaxies. This window effect is a source of observational systematic error and impacts the measured galaxy clustering, especially on scales comparable to survey size.
-
-We follow a similar approach to that of \cite{chon2004fast} to model the window function effect on the theoretical power spectrum $C_{\ell}$ rather than correcting the measured pseudo-power spectrum from data. First, we use \textsc{healpix} to compute the pseudo-power spectrum of the window $\hat{C}^{\rm window}_{\ell}$, which is defined by a mask file in ring ordering format with \textsc{nside}$=256$. Then, we transform it to correlation function by,
-
-\begin{equation}
-    \omega^{\rm window} (\theta) = \frac{1}{4\pi}\sum_{\ell} (2\ell+1) \hat{C}^{\rm window}_{\ell} P_{\ell}(\cos \theta).
-\end{equation}
-Next, we normalize $\omega^{\rm window}$ such that it is normalized to one at $\theta=0$. Finally, we multiply the theory correlation function by $\omega^{\rm window}$ and transform the result back to $\ell$-space,%\footnote{We use Gauss-Legendre Quadrature to do the integration over $d\theta$.},
+Following \cite{chon2004fast}, we model the window function effect on the theoretical power spectrum $C_{\ell}$ rather than correcting the estimated pseudo power spectrum from observation. The convolution in spherical harmonics spaces becomes a multiplication in the correlation function space. First, we estimate the correlation function of the survey mask, and then multiply the model correlation function by the survey window correlation function. Finally, the window-convolved power spectrum is obtained from,
 \begin{align}
-    \hat{\omega}^{\rm model} &= \omega^{\rm model} \omega^{\rm window} \\
-    \hat{C}^{\rm model}_{\ell} &= 2\pi \int d\theta \hat{\omega}^{\rm model}(\theta)P_{\ell}(\cos \theta).
+    \hat{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm mask}~P_{\ell}(\cos \theta) d\theta.
 \end{align}
 
-By definition, the integral of the observed density contrast over the footprint vanishes,
-\begin{align}\label{eq:ic}
-    \sum_{i} \hat{\delta}_{i}~f_{{\rm pix},i} = 0,
-\end{align}
-and this boundary condition induces an effect in the measured power spectrum commonly referred to as the \textit{integral constraint}. We account for this effect in the modeling by,
+We account for the effect of integral constraint by subtracting the power spectrum of the survey mask,
 \begin{equation}
-     \hat{C}^{\rm model, IC}_{\ell} = \hat{C}^{\rm model}_{\ell} - \hat{C}^{\rm model}_{\ell=0} (\frac{\hat{C}^{\rm window}_{\ell}}{\hat{C}^{\rm window}_{\ell=0}})
+     \hat{C}^{\rm model, IC}_{\ell} = \hat{C}^{\rm model}_{\ell} - \hat{C}^{\rm model}_{\ell=0} (\frac{\hat{C}^{\rm window}_{\ell}}{\hat{C}^{\rm window}_{\ell=0}}).
 \end{equation}
 
-Fig. \ref{fig:model_mock} shows the mean measured power spectrum of 1000 lognormal density fields (dashed) and best fit theory prediction. light and dark shades represent the 68\% error on the mean and one single realization, respectively. DESI footprint mask is applied to the mocks, and even though DESI covers around $40\%$ of the sky, but the window effect is affecting modes down to $\ell=200$. On the other hand, integral constraint only alters the power in the first two bins.
+We validate the pipeline for modeling the angular power spectrum against the lognormal simulations. Fig. \ref{fig:model_mock} shows the log-transformed mean of 1000 spectra from the simulations (dashed) and the best fit theory prediction before and after accounting for survey geometry and integral constraint. light and dark shades represent the 68\% error on the mean and one single realization, respectively. DESI footprint mask is applied to the mocks, and even though DESI covers around $40\%$ of the sky, but the window effect is affecting modes down to $\ell=200$. On the other hand, integral constraint only alters the power in the first two bins.
 
 \subsection{Parameter estimation}
 Signature of local PNG is unique and cannot be reproduced with other cosmological parameters. We allow three parameters to vary; $\fnl$, shotnoise, and bias at $z=0$. Throughout this manuscript, we bin each mode with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$, while weighting each mode by $2\ell+1$. We also find that the distribution of power spectrum at the lowest bin, $2\leq \ell < 12$,  is not Gaussian and its standard deviation varies significantly from mocks with $\fnl=0$ to $76.9$ (see, Fig. \ref{fig:histcell}). Therefore, we attempt to fit $\log C_{\ell}$ to make our constraints insensitive to the choice of covariance matrix. The parameter $\fnl$ is constrained by maximizing a posterior defined as,
